objects/Veda_dis_qualified_Directorship__c.object
<CustomObject>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipLabel>Veda dis qualified Directorships</relationshipLabel>
        <relationshipName>Veda_dis_qualified_Directorships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>date_Disqualified_Until__c</fullName>
        <label>date Disqualified Until</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_Disqualified__c</fullName>
        <label>date Disqualified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Extract_Date__c</fullName>
        <label>last Extract Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Extract_Time__c</fullName>
        <label>last Extract Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Update_Date__c</fullName>
        <label>last Update Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Update_Time__c</fullName>
        <label>last Update Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda dis qualified Directorship</label>
    <nameField>
        <label>dis qualified Directorship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda dis qualified Directorships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>